--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   },
   "homepage": "https://github.com/MatrixByte/Aubrey#readme",
   "dependencies": {
+    "@yimura/scraper": "^1.2.3",
     "ascii-table": "^0.0.9",
     "canvacord": "^5.4.8",
+    "disc-plexus": "^1.1.3",
     "discord.js": "^14.5.0",
     "glob": "^8.0.3",
     "mongoose": "^6.6.4",
+    "ms": "^2.1.3",
+    "plexus-djs14": "^1.0.8-beta",
     "wyr": "^1.1.1"
   }
 }
