--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ascii-table": "^0.0.9",
     "canvacord": "^5.4.8",
     "disc-plexus": "^1.1.3",
+    "discord-html-transcripts": "^3.1.0",
     "discord.js": "^14.5.0",
     "glob": "^8.0.3",
     "mongoose": "^6.6.4",
