--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^6.6.4",
     "ms": "^2.1.3",
     "plexus-djs14": "^1.0.8-beta",
+    "quick.eco": "^2.0.3",
     "wyr": "^1.1.1"
   }
 }
