--- a/package.json
+++ b/package.json
@@ -18,13 +18,20 @@
   },
   "homepage": "https://github.com/MatrixByte/Aubrey#readme",
   "dependencies": {
+    "@discordjs/opus": "^0.8.0",
+    "@distube/soundcloud": "^1.2.2",
+    "@distube/spotify": "^1.4.2",
+    "@distube/yt-dlp": "^1.1.3",
     "@yimura/scraper": "^1.2.3",
     "ascii-table": "^0.0.9",
     "canvacord": "^5.4.8",
     "disc-plexus": "^1.1.3",
     "discord-html-transcripts": "^3.1.0",
     "discord.js": "^14.5.0",
+    "distube": "^4.0.4",
+    "ffmpeg-static": "^4.4.1",
     "glob": "^8.0.3",
+    "libsodium-wrappers": "^0.7.10",
     "mongoose": "^6.6.4",
     "ms": "^2.1.3",
     "plexus-djs14": "^1.0.8-beta",
