--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@yimura/scraper": "^1.2.3",
     "ascii-table": "^0.0.9",
     "canvacord": "^5.4.8",
-    "disc-plexus": "^1.1.3",
     "discord-html-transcripts": "^3.1.0",
     "discord.js": "^14.6.0",
     "distube": "^4.0.4",
@@ -34,9 +33,9 @@
     "libsodium-wrappers": "^0.7.10",
     "mongoose": "^6.6.4",
     "ms": "^2.1.3",
-    "plexus-djs14": "^1.0.9-beta",
     "quick.eco": "^2.0.3",
     "randomized-string": "^1.2.7",
+    "simply-djs": "^3.0.2",
     "wyr": "^1.1.1"
   }
 }
