fix .env and run code tru prettier

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-token="DISCORD BOT TOKEN"
+TOKEN="DISCORD BOT TOKEN"
 DatabaseURL="MONGO DATABASE URL"
+client_id="SPOTIFY ID"
+client_secret="SPOTIFY SECRET"
