--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "discord-html-transcripts": "^3.1.0",
     "discord.js": "^14.6.0",
     "distube": "^4.0.4",
+    "dotenv": "^16.0.3",
     "ffmpeg-static": "^4.4.1",
     "formidable": "^2.1.1",
     "glob": "^8.0.3",
