discord-dasboard testing

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
 TOKEN="DISCORD BOT TOKEN"
 DatabaseURL="MONGO DATABASE URL"
-client_id="SPOTIFY ID"
-client_secret="SPOTIFY SECRET"
+spotify_id="SPOTIFY ID"
+spotify_secret="SPOTIFY SECRET"
+DD_LICENSE="DISCORD-DASHBOARD LICENCE"
+redirect_uri="REDIRECT URL for discord-dashboard"
+client_secret="BOT SECRET"
+client_id="BOT ID"
