--- a/config.json
+++ b/config.json
@@ -1,4 +1,9 @@
 {
-  "spotify_ID": "7343d7fc0efc4480a0db879a34600c08",
-  "spotify_secret": "0cb91c79b53b4c7b98a5c2a3b3936fc2"
+  "token": "OTczMTM2NTc2MDE0MDU3NDgy.G7syYO.wkNDZHiQ2Go7Wy9feP7VXwkD-LayP03XtCq3Qg",
+  "client": {
+    "id": "973136576014057482",
+    "secret": "3p7SAMobLV4gBJP_bKXz2OisqAr7VS_5"
+  },
+  "port": 8000,
+  "dbd_license": "a656b845-bb12-45bc-b10b-f16988e589f5"
 }
