--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "ascii-table": "^0.0.9",
     "axios": "^1.3.3",
     "canvacord": "^5.4.8",
+    "dbd-soft-ui": "^1.6.36-beta.1",
+    "discord-dashboard": "^2.3.61",
     "discord-html-transcripts": "^3.1.0",
     "discord.js": "^14.6.0",
     "distube": "^4.0.4",
