--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@distube/soundcloud": "^1.2.2",
     "@distube/spotify": "^1.4.2",
     "@yimura/scraper": "^1.2.3",
+    "asap": "^2.0.6",
     "ascii-table": "^0.0.9",
     "axios": "^1.3.3",
     "canvacord": "^5.4.8",
     "dbd-soft-ui": "^1.6.36-beta.1",
+    "discord-arts": "^0.4.0",
     "discord-dashboard": "^2.3.61",
+    "discord-gamecord": "^4.3.0",
     "discord-html-transcripts": "^3.1.0",
     "discord.js": "^14.6.0",
     "distube": "^4.0.4",
@@ -39,7 +42,7 @@
     "ms": "^2.1.3",
     "randomized-string": "^1.2.7",
     "simply-djs": "^3.0.2",
-    "superagent": "^7.0.2",
+    "superagent": "^7.1.5",
     "wyr": "^1.1.1"
   }
 }
