--- a/package.json
+++ b/package.json
@@ -18,31 +18,25 @@
   },
   "homepage": "https://github.com/MatrixByte/Subrey#readme",
   "dependencies": {
-    "@discordjs/opus": "^0.8.0",
-    "@distube/soundcloud": "^1.2.2",
-    "@distube/spotify": "^1.4.2",
-    "@yimura/scraper": "^1.2.3",
-    "asap": "^2.0.6",
+    "@distube/soundcloud": "^1.3.3",
+    "@distube/spotify": "^1.5.2",
+    "@yimura/scraper": "^1.2.4",
     "ascii-table": "^0.0.9",
-    "axios": "^1.3.3",
+    "axios": "^1.6.5",
     "canvacord": "^5.4.8",
-    "dbd-soft-ui": "^1.6.36-beta.1",
-    "discord-arts": "^0.4.0",
-    "discord-dashboard": "^2.3.61",
-    "discord-gamecord": "^4.3.0",
-    "discord-html-transcripts": "^3.1.0",
-    "discord.js": "^14.6.0",
-    "distube": "^4.0.4",
-    "dotenv": "^16.0.3",
-    "ffmpeg-static": "^4.4.1",
-    "formidable": "^2.1.1",
+    "discord-arts": "^0.5.8",
+    "discord-gamecord": "^4.4.1",
+    "discord-html-transcripts": "^3.2.0",
+    "discord.js": "^14.12.1",
+    "distube": "^4.1.1",
+    "dotenv": "^16.3.2",
+    "ffmpeg-static": "^5.2.0",
     "glob": "^8.0.3",
-    "libsodium-wrappers": "^0.7.10",
-    "mongoose": "^6.6.4",
+    "memer-api": "^4.0.2",
+    "mongoose": "^8.1.0",
     "ms": "^2.1.3",
-    "randomized-string": "^1.2.7",
-    "simply-djs": "^3.0.2",
-    "superagent": "^7.1.5",
-    "wyr": "^1.1.1"
+    "randomized-string": "^2.0.1",
+    "simply-djs": "^4.1.1",
+    "superagent": "^8.1.2"
   }
 }
