--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Official src code of Subrey discord bot.",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,9 +19,6 @@
   },
   "homepage": "https://github.com/MatrixByte/Subrey#readme",
   "dependencies": {
-    "@distube/soundcloud": "^1.3.3",
-    "@distube/spotify": "^1.5.2",
-    "@yimura/scraper": "^1.2.4",
     "ascii-table": "^0.0.9",
     "axios": "^1.6.5",
     "canvacord": "^5.4.8",
@@ -28,11 +26,8 @@
     "discord-gamecord": "^4.4.1",
     "discord-html-transcripts": "^3.2.0",
     "discord.js": "^14.12.1",
-    "distube": "^4.1.1",
     "dotenv": "^16.3.2",
-    "ffmpeg-static": "^5.2.0",
     "glob": "^8.0.3",
-    "memer-api": "^4.0.2",
     "mongoose": "^8.1.0",
     "ms": "^2.1.3",
     "randomized-string": "^2.0.1",
